# rate-limiter

./: CLAUDE.md  Cargo.toml  DECISIONS.md  README.md  convictions.md  criteria.md  gateway.example.yaml  prompt.md  reqs.md  spec.md
src/: config.rs  error.rs  health.rs  main.rs  pipeline.rs  proxy.rs  rate_limit.rs  router.rs  server.rs  state.rs
src/pipeline/: auth.rs  method.rs  mod.rs  request_transform.rs  response_transform.rs  transform.rs
src/upstream/: balance.rs  breaker.rs  health.rs  mod.rs  target.rs
tests/: auth.rs  integration.rs  proxy_features.rs  proxy_hygiene.rs  rate_limit.rs  resilience.rs  schema_general.rs  transform.rs
tests/common/: mod.rs
