[package]
name = "gatewaykit"
version = "0.1.0"
edition = "2021"
description = "GatewayKit — a lightweight, config-driven API gateway built on hyper"

[[bin]]
name = "gatewaykit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "server", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# JSON parse/build for P3 body transforms (request mapping, response envelope).
# A data-format library, not an HTTP/proxy framework — the transport-only
# boundary is intact.
serde_json = "1"
thiserror = "2"
anyhow = "1"
# Object-safe async trait methods, so the pipeline can hold a per-route
# `Vec<Arc<dyn Stage>>` and `await` each stage. A utility macro, not a
# gateway/proxy framework — the "hyper only as transport" boundary is intact.
async-trait = "0.1"
